log
Sat Mar 13 21:57:19 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:15:6: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c = a + b;
      ^
exercises.c:16:11: error: ‘return’ with a value, in function returning void [-Werror]
    return c;
           ^
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
cc1: all warnings being treated as errors
Compilation failed
Sat Mar 13 21:57:37 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:16:11: error: ‘return’ with a value, in function returning void [-Werror]
    return c;
           ^
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
cc1: all warnings being treated as errors
Compilation failed
Sat Mar 13 21:57:42 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:16:11: error: ‘return’ with a value, in function returning void [-Werror]
    return *c;
           ^~
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
cc1: all warnings being treated as errors
Compilation failed
Sat Mar 13 21:58:02 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
2006e9f
Sat Mar 13 22:06:21 UTC 2021: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|6
total_score: 10/70
f4692e0
Sat Mar 13 22:44:02 UTC 2021: 
 exercises.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
 tests:  1|6
total_score: 10/70
464b400
Sat Mar 13 22:45:10 UTC 2021: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|6
total_score: 10/70
6d6dc58
Sat Mar 13 23:08:46 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
0de2630
Sat Mar 13 23:09:20 UTC 2021: 
 exercises.c | 11 +----------
 1 file changed, 1 insertion(+), 10 deletions(-)
 tests:  2|5
total_score: 20/70
6aec0db
Sat Mar 13 23:16:49 UTC 2021: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
a6f6cce
Sat Mar 13 23:29:56 UTC 2021: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
ae53ea5
Sat Mar 13 23:31:27 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
1d099d0
Sat Mar 13 23:32:48 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
a8272e0
Sat Mar 13 23:33:19 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
c52b296
Sat Mar 13 23:40:51 UTC 2021: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
a14bd08
Sat Mar 13 23:43:39 UTC 2021: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
06b056a
Sat Mar 13 23:51:35 UTC 2021: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  3|4
total_score: 30/70
176d0a3
Sat Mar 13 23:52:02 UTC 2021: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
5ffe07e
Sat Mar 13 23:53:15 UTC 2021: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
0cddcfd
Sat Mar 13 23:53:52 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
22d83b7
Sat Mar 13 23:54:55 UTC 2021: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
db5d608
